# decision_maker

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp
src/headers/: Finder.h  ProcessExecutor.h  Utils.h
src/models/: Chapters.h  Process.h
src/usecases/: Finder.cpp  ProcessExecutor.cpp  Utils.cpp
